# browser-extensions

./: .gitignore  README.md
chrome/: manifest.json  options.html  popup.html  sandbox.html
firefox/: bg.js  manifest.json
wasm/: Cargo.toml
wasm/src/: lib.rs
webext/: .eslintrc.js  jest.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.json  tsconfig.release.json
webext/public/: manifest.json  options.html  popup.html
webext/src/: content.ts  options.svelte  options.ts  popup.svelte  popup.ts
webext/src/theme/: _smui-theme.scss
