[package]
authors = ["Luc Georges <luc.sydney.georges@gmail.com>", "Bastien Penavayre <bastienpenavayre@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/middle-men/browser-extensions"
name = "wasm"
version = "0.1.0"
description = "Middle Man wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

